ticket-pdf-generator/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airlines-ticket-pdf-generator
  namespace: airlines-backend-microservices
spec:
  to:
    kind: Service
    name: airlines-ticket-pdf-generator
  port:
    targetPort: 8080
  tls:
    termination: edge
